fix: wrap post titles

--- a/components/post.module.css
+++ b/components/post.module.css
@@ -36,13 +36,17 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .cover {
+
+  .cover,
+  .post {
     width: 100vw;
   }
 }
 
 @media only screen and (min-width: 601px) {
-  .cover {
+
+  .cover,
+  .post {
     width: 480px;
   }
 }
